# libluxaflex

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: LuxaflexConnection.cpp  LuxaflexConnection.h  base64.cpp  base64.h  main.cpp  objectstructs.h  requeststructs.h  responsestructs.h
